# differentiable-renderer

./: .gitmodules  CMakeLists.txt  Makefile  README.md  helpers.py  render.cpp
include/: args.hpp  autograd.hpp  brdf.hpp  bxdf.hpp  camera.hpp  common.hpp  complex.hpp  constants.hpp  dual.hpp  emitter.hpp  integrate.hpp  material.hpp  pathtracer.hpp  random.hpp  sampler.hpp  scene.hpp  shape.hpp  vector.hpp  write.hpp
include/drt/: bxdf.hpp  camera.hpp  dual.hpp  integrate.hpp  pathtracer.hpp  random.hpp  shape.hpp  vector.hpp
src/: args.cpp  args.hpp  main.cpp  render.cpp  write.hpp
